force-app/main/default/objects/ABHI_Case_Detail__c/ABHI_Case_Detail__c.object-meta.xml
<CustomObject>
    <label>ABHI Case Detail</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ABHIL</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABHI Case Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>