force-app/main/default/objects/ABHI_Case_Detail__c/fields/ABHI_isSecondStageAcknowledgementSent__c.field-meta.xml
<CustomField>
    <fullName>ABHI_isSecondStageAcknowledgementSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSecondStageAcknowledgementSent</label>
    <type>Checkbox</type>
</CustomField>