force-app/main/default/objects/ABHI_Case_Detail__c/fields/Acccount_Number__c.field-meta.xml
<CustomField>
    <fullName>Acccount_Number__c</fullName>
    <label>Acccount Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>