force-app/main/default/objects/ABHI_Case_Detail__c/fields/Ack_Officer_Designation__c.field-meta.xml
<CustomField>
    <fullName>Ack_Officer_Designation__c</fullName>
    <label>Ack Officer Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>