force-app/main/default/objects/ABHI_Case_Detail__c/fields/Acknowledged_Date__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_Date__c</fullName>
    <description>Complaints IGMS History Field</description>
    <label>Acknowledged Date</label>
    <type>Date</type>
</CustomField>