force-app/main/default/objects/ABHI_Case_Detail__c/fields/Active_Dayz_Dispute_Concern__c.field-meta.xml
<CustomField>
    <fullName>Active_Dayz_Dispute_Concern__c</fullName>
    <label>Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reflecting Blank</fullName>
            </value>
            <value>
                <fullName>Reflecting Incorrect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>