force-app/main/default/objects/ABHI_Case_Detail__c/fields/Additional_Closure_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Closure_Information__c</fullName>
    <label>Additional Closure Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>