force-app/main/default/objects/ABHI_Case_Detail__c/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent Address</fullName>
                <default>true</default>
                <label>Permanent Address</label>
            </value>
            <value>
                <fullName>Communication Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>