force-app/main/default/objects/ABHI_Case_Detail__c/fields/Addressed_to_Insurer__c.field-meta.xml
<CustomField>
    <fullName>Addressed_to_Insurer__c</fullName>
    <label>Addressed to Insurer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>