force-app/main/default/objects/ABHI_Case_Detail__c/fields/Ailment_Details__c.field-meta.xml
<CustomField>
    <fullName>Ailment_Details__c</fullName>
    <label>Ailment Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>