force-app/main/default/objects/ABHI_Case_Detail__c/fields/Alternate_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact_Number__c</fullName>
    <label>Alternate Contact Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>