force-app/main/default/objects/ABHI_Case_Detail__c/fields/Alternate_Contact_Number_Member__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact_Number_Member__c</fullName>
    <label>Alternate Contact Number Member</label>
    <length>100</length>
    <type>Text</type>
</CustomField>