force-app/main/default/objects/ABHI_Case_Detail__c/fields/Alternate_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email_Id__c</fullName>
    <label>Alternate Email Id</label>
    <type>Email</type>
</CustomField>