force-app/main/default/objects/ABHI_Case_Detail__c/fields/Alternate_Email_ID_Member__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email_ID_Member__c</fullName>
    <label>Alternate Email ID Member</label>
    <type>Email</type>
</CustomField>