force-app/main/default/objects/ABHI_Case_Detail__c/fields/Annual_health_check_up__c.field-meta.xml
<CustomField>
    <fullName>Annual_health_check_up__c</fullName>
    <label>Annual health check-up?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>