force-app/main/default/objects/ABHI_Case_Detail__c/fields/Annual_Health_Check_up_Concern__c.field-meta.xml
<CustomField>
    <fullName>Annual_Health_Check_up_Concern__c</fullName>
    <label>Annual Health Check-up Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schedule AHC</fullName>
            </value>
            <value>
                <fullName>Cancel AHC</fullName>
            </value>
            <value>
                <fullName>Reschedule AHC</fullName>
            </value>
            <value>
                <fullName>Dental Plan Appointment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>