force-app/main/default/objects/ABHI_Case_Detail__c/fields/Area_Locality__c.field-meta.xml
<CustomField>
    <fullName>Area_Locality__c</fullName>
    <label>Area/Locality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>