force-app/main/default/objects/ABHI_Case_Detail__c/fields/Availability_of_related_documents_report__c.field-meta.xml
<CustomField>
    <fullName>Availability_of_related_documents_report__c</fullName>
    <label>Availability of related documents/report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>