force-app/main/default/objects/ABHI_Case_Detail__c/fields/Branch_Concern__c.field-meta.xml
<CustomField>
    <fullName>Branch_Concern__c</fullName>
    <label>Branch Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch address/location</fullName>
            </value>
            <value>
                <fullName>Feedback/Issues related to branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>