force-app/main/default/objects/ABHI_Case_Detail__c/fields/Call_back_Concern__c.field-meta.xml
<CustomField>
    <fullName>Call_back_Concern__c</fullName>
    <label>Call back Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation and refund</fullName>
            </value>
            <value>
                <fullName>Cashless</fullName>
            </value>
            <value>
                <fullName>Digital Issue</fullName>
            </value>
            <value>
                <fullName>Endorsement</fullName>
            </value>
            <value>
                <fullName>Wellness</fullName>
            </value>
            <value>
                <fullName>Mis-sale</fullName>
            </value>
            <value>
                <fullName>Policy Document</fullName>
            </value>
            <value>
                <fullName>Reimbursement</fullName>
            </value>
            <value>
                <fullName>Renewals</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>