force-app/main/default/objects/ABHI_Case_Detail__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal reasons</fullName>
            </value>
            <value>
                <fullName>Already has policy</fullName>
            </value>
            <value>
                <fullName>Financial reasons</fullName>
            </value>
            <value>
                <fullName>Family reason</fullName>
            </value>
            <value>
                <fullName>Not happy with features</fullName>
            </value>
            <value>
                <fullName>Not happy with the service</fullName>
            </value>
            <value>
                <fullName>Customer retained</fullName>
            </value>
            <value>
                <fullName>Customer denied retention</fullName>
            </value>
            <value>
                <fullName>sales false promise</fullName>
            </value>
            <value>
                <fullName>Death of Proposer</fullName>
            </value>
            <value>
                <fullName>Incorrect Issuance &amp; Rebooking of policies</fullName>
            </value>
            <value>
                <fullName>Policy Features are different from what was communicated / Mis-selling /Fraud</fullName>
            </value>
            <value>
                <fullName>Premium amount not as agreed/understood</fullName>
            </value>
            <value>
                <fullName>Product/policy does not meet my expectations</fullName>
            </value>
            <value>
                <fullName>Want to Opt for a different Health Plan from ABHI/ from another Insurance Company</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>