force-app/main/default/objects/ABHI_Case_Detail__c/fields/Case_Closed_Resolution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Resolution_Comments__c</fullName>
    <label>Case Closed Resolution Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>