force-app/main/default/objects/ABHI_Case_Detail__c/fields/Case_Closed_Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Resolved_By__c</fullName>
    <label>Case Closed Resolved By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>