force-app/main/default/objects/ABHI_Case_Detail__c/fields/Case_creation__c.field-meta.xml
<CustomField>
    <fullName>Case_creation__c</fullName>
    <label>Case creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schedule PPMC</fullName>
            </value>
            <value>
                <fullName>Schedule Digital MER</fullName>
            </value>
            <value>
                <fullName>Schedule Tele MER</fullName>
            </value>
            <value>
                <fullName>Schedule video MER</fullName>
            </value>
            <value>
                <fullName>Cancel PPMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>