force-app/main/default/objects/ABHI_Case_Detail__c/fields/Case_Reopened_By__c.field-meta.xml
<CustomField>
    <fullName>Case_Reopened_By__c</fullName>
    <label>Case Reopened By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>