force-app/main/default/objects/ABHI_Case_Detail__c/fields/Case_Reopened_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Reopened_By_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Reopened By Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ABHI_Case_Details</relationshipName>
    <type>Lookup</type>
</CustomField> 