force-app/main/default/objects/ABHI_Case_Detail__c/fields/Cashless_Documents_Required__c.field-meta.xml
<CustomField>
    <fullName>Cashless_Documents_Required__c</fullName>
    <label>Cashless Documents Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Approval Letter</fullName>
            </value>
            <value>
                <fullName>Interim Approval Letter</fullName>
            </value>
            <value>
                <fullName>Query Letter</fullName>
            </value>
            <value>
                <fullName>Final Approval Letter</fullName>
            </value>
            <value>
                <fullName>Settlement Letter</fullName>
            </value>
            <value>
                <fullName>Denial letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>