force-app/main/default/objects/ABHI_Case_Detail__c/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <label>Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repeat</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
                <default>true</default>
                <label>Information</label>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>