force-app/main/default/objects/ABHI_Case_Detail__c/fields/Certificate_No__c.field-meta.xml
<CustomField>
    <fullName>Certificate_No__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>Certificate No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>