force-app/main/default/objects/ABHI_Case_Detail__c/fields/Change_in_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Relationship__c</fullName>
    <label>Change in Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
            <value>
                <fullName>Daughter - In-law</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother-In-Law</fullName>
            </value>
            <value>
                <fullName>Father-In-Law</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>Grandfather</fullName>
            </value>
            <value>
                <fullName>Grandmother</fullName>
            </value>
            <value>
                <fullName>Grandson</fullName>
            </value>
            <value>
                <fullName>Granddaughter</fullName>
            </value>
            <value>
                <fullName>Son-in-law</fullName>
            </value>
            <value>
                <fullName>Brother in-law</fullName>
            </value>
            <value>
                <fullName>Sister in-law</fullName>
            </value>
            <value>
                <fullName>Nephew</fullName>
            </value>
            <value>
                <fullName>Niece</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>