force-app/main/default/objects/ABHI_Case_Detail__c/fields/Check_whether_customer_is_eligible_for_O__c.field-meta.xml
<CustomField>
    <fullName>Check_whether_customer_is_eligible_for_O__c</fullName>
    <label>Is Customer eligible for OPD claim?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>