force-app/main/default/objects/ABHI_Case_Detail__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please enter Policy Number to view list of available claims</inlineHelpText>
    <label>Claim Number</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Claim__c.Policy_Number__c</field>
            <operation>equals</operation>
            <valueField>$Source.Policy__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>ABHI Case Details</relationshipLabel>
    <relationshipName>ABHI_Case_Details</relationshipName>
    <type>Lookup</type>
</CustomField>