force-app/main/default/objects/ABHI_Case_Detail__c/fields/Claim_Amount_3__c.field-meta.xml
<CustomField>
    <fullName>Claim_Amount_3__c</fullName>
    <label>Claim Amount-3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>