force-app/main/default/objects/ABHI_Case_Detail__c/fields/Claim_Clsr_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Claim_Clsr_Additional_Info__c</fullName>
    <description>IGMS --&gt; Required to Resolve Escalated Cases.</description>
    <label>Claim Clsr Additional Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>