force-app/main/default/objects/ABHI_Case_Detail__c/fields/Claim_letter_required__c.field-meta.xml
<CustomField>
    <fullName>Claim_letter_required__c</fullName>
    <label>Claim letter required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial / Interim approval letter</fullName>
            </value>
            <value>
                <fullName>Query letter</fullName>
            </value>
            <value>
                <fullName>Final Approval letter</fullName>
            </value>
            <value>
                <fullName>Settlement letter</fullName>
            </value>
            <value>
                <fullName>Denial letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>