force-app/main/default/objects/ABHI_Case_Detail__c/fields/Claim_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Claim_Number_1__c</fullName>
    <label>Claim Number-1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>