force-app/main/default/objects/ABHI_Case_Detail__c/fields/Claim_Payment_Cheque_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Payment_Cheque_Date__c</fullName>
    <description>This field is used in IGMS to Salesforce Complaint Creation Inbound API.</description>
    <label>Claim Payment Cheque Date</label>
    <type>Date</type>
</CustomField>