force-app/main/default/objects/ABHI_Case_Detail__c/fields/Claim_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claim_Received_Amount__c</fullName>
    <label>Claim Received Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>