force-app/main/default/objects/ABHI_Case_Detail__c/fields/Claim_Registered__c.field-meta.xml
<CustomField>
    <fullName>Claim_Registered__c</fullName>
    <label>Claim Registered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>