force-app/main/default/objects/ABHI_Case_Detail__c/fields/Claim_Service_Concern__c.field-meta.xml
<CustomField>
    <fullName>Claim_Service_Concern__c</fullName>
    <label>Claim / Service Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claim - Legal / Ombudsman</fullName>
            </value>
            <value>
                <fullName>Service - Legal / Ombudsman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>