force-app/main/default/objects/ABHI_Case_Detail__c/fields/Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status__c</fullName>
    <label>Claim Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>