force-app/main/default/objects/ABHI_Case_Detail__c/fields/Com_City__c.field-meta.xml
<CustomField>
    <fullName>Com_City__c</fullName>
    <label>City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>