force-app/main/default/objects/ABHI_Case_Detail__c/fields/Com_Country__c.field-meta.xml
<CustomField>
    <fullName>Com_Country__c</fullName>
    <label>Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>