force-app/main/default/objects/ABHI_Case_Detail__c/fields/Com_State__c.field-meta.xml
<CustomField>
    <fullName>Com_State__c</fullName>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>