force-app/main/default/objects/ABHI_Case_Detail__c/fields/Company_induced_cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Company_induced_cancellation_Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company induced cancellation- fraud</fullName>
            </value>
            <value>
                <fullName>Company induced cancellation- non fraud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>