force-app/main/default/objects/ABHI_Case_Detail__c/fields/Complaint_Bifurcation__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Bifurcation__c</fullName>
    <label>Complaint Bifurcation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Complaint_Category1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claim Repudiation</fullName>
            </value>
            <value>
                <fullName>Claim Deduction</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Refund</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
                <isActive>false</isActive>
                <label>Renewal</label>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>