force-app/main/default/objects/ABHI_Case_Detail__c/fields/Complaint_Category1__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Category1__c</fullName>
    <label>Complaint Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>