force-app/main/default/objects/ABHI_Case_Detail__c/fields/Complaint_Category__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Category__c</fullName>
    <label>Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repeat</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
                <default>true</default>
                <label>Complaint</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>