force-app/main/default/objects/ABHI_Case_Detail__c/fields/Complaint_Sub_Bifurcation__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Sub_Bifurcation__c</fullName>
    <label>Complaint Sub Bifurcation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Complaint_Bifurcation__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>Non-disclosure</fullName>
            </value>
            <value>
                <fullName>Waiting period</fullName>
            </value>
            <value>
                <fullName>Pre-Existing Disease / Permanent Exclusion</fullName>
            </value>
            <value>
                <fullName>Hospitalisation not justified</fullName>
            </value>
            <value>
                <fullName>Discrepancies and Lapses</fullName>
            </value>
            <value>
                <fullName>Treatment possible in OPD</fullName>
            </value>
            <value>
                <fullName>Non-Submission of Documents</fullName>
            </value>
            <value>
                <fullName>R&amp;C applied</fullName>
            </value>
            <value>
                <fullName>Over-billed</fullName>
            </value>
            <value>
                <fullName>Overstay</fullName>
            </value>
            <value>
                <fullName>Clarification required on query raised</fullName>
            </value>
            <value>
                <fullName>Insured asked to apply for reimbursement</fullName>
            </value>
            <value>
                <fullName>Claim Settled / Claim within TAT</fullName>
            </value>
            <value>
                <fullName>Delay in submission</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>HA/AHC</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>App Issue</fullName>
            </value>
            <value>
                <fullName>Policy not issued</fullName>
            </value>
            <value>
                <fullName>Policy issued without customer consent</fullName>
            </value>
            <value>
                <fullName>Agent/Sales person has asked for OTP, however, didn&apos;t inform about policy</fullName>
            </value>
            <value>
                <fullName>Policy benefits available in documents are not the one informed by the agent (Miss Communication)</fullName>
            </value>
            <value>
                <fullName>Gift, freebies, Voucher, and Money-back were promised</fullName>
            </value>
            <value>
                <fullName>Forcefully policy issued</fullName>
            </value>
            <value>
                <fullName>PED disclosed but not added in policy</fullName>
            </value>
            <value>
                <fullName>Waiting period not informed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>